...
        'Ibiza',
        'Bilbao',
        'Toledo',
      ],
      'Greece': [
        'Athens',
        'Santorini',
        'Mykonos',
        'Crete',
        'Rhodes',
        'Corfu',
        'Thessaloniki',
        'Meteora',
...
